examples/test/testpolicy14937.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14937
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key10: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value30
          key38: value0
          key21: value45
      podSelector:
        matchLabels:
          key36: value27
          key0: value27
